--- a/tsznav/index.html
+++ b/tsznav/index.html
@@ -160,7 +160,7 @@
 </body>
 
 </html>
-<script src="./static/js/data.js"></script>
+<script src="./static/js/data.js?v1.1"></script>
 <script>
     const App = {
         setup() {
