--- a/website/cattool/index.html
+++ b/website/cattool/index.html
@@ -391,7 +391,7 @@
                     </div>
                     
                 </el-tab-pane>
-                <el-tab-pane label="智能科技" name="12">
+                <el-tab-pane label="AI科技" name="12">
                     <div class="navbody-box">
                         <el-scrollbar  class="noscoll">
                             <div class="nav_tab_body" v-for="(navs,index) in AIlist" :key="index">
@@ -488,11 +488,15 @@
                 </li>
             </ul>
         </div>
+        <div style="position: fixed; bottom:60px;right:0">
+           <div style="font-size: 12px;margin-bottom: 8px;text-align: center;letter-spacing: 2px;">建议添加链接</div> 
+            <a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=fjDFCuNRXjRmFIWBllfg0k_EtpJ_PTcp&jump_from=webapi&authKey=6wclgcMhp7+WEVYoinsU+KxtuKlhvkTcn6tb8RIgwQfN/Gqw2OVYpOdQY3WtjPmx"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="cattool 链接导航增删交" title="cattool 链接导航增删交"></a>
+        </div>
     </div>
 </body>
 
 </html>
-<script src="./static/js/data.js?v1.1"></script>
+<script src="./static/js/data.js?v1.3"></script>
 <script src="./static/data/logdata.js"></script>
 <script>
     const App = {
