--- a/website/opentool/index.html
+++ b/website/opentool/index.html
@@ -12,8 +12,8 @@
     <script src="../cattool/static/js/elementPlus-zhcn.js"></script>
     <script src="../cattool/static/js/elementPlusIcon@2.0.4.js"></script>
     <script src="../cattool/static/js/init.js"></script>
-    <title>开发者工具箱</title>
-    <link href="../cattool/static/css/common.css" rel="stylesheet" type="text/css"/>
+    <title>开发者社区</title>
+    <link href="../cattool/static/css/common.css?v1.1" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="../cattool/static/css/fonts/iconfont.css">
     <link rel="stylesheet" href="../cattool/static/css/iconfonts/iconfont.css">
     <link href="../cattool/static/css/help.css" rel="stylesheet" type="text/css"/>
