--- a/website/cattool/index.html
+++ b/website/cattool/index.html
@@ -627,7 +627,7 @@
 </body>
 
 </html>
-<script src="./static/js/data.js"></script>
+<script src="./static/js/data.js?v1.01"></script>
 <script src="./static/data/logdata.js"></script>
 <script>
     const App = {
