--- a/byte/index.html
+++ b/byte/index.html
@@ -215,3 +215,14 @@
     }
     mountApp(App);
 </script>
+
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?d7a45917737db687fa00c6addb47e3b2";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    
