--- a/tsznav/index.html
+++ b/tsznav/index.html
@@ -267,7 +267,7 @@
 </body>
 
 </html>
-<script src="./static/js/data.js?v1.0.2"></script>
+<script src="./static/js/data.js"></script>
 <script>
     const App = {
         setup() {
