--- a/byte/index.html
+++ b/byte/index.html
@@ -162,7 +162,7 @@
 </body>
 
 </html>
-<script src="./data.js"></script>
+<script src="./data.js?v1.0.1"></script>
 <script>
     const App = {
         setup() {
