--- a/byte/index.html
+++ b/byte/index.html
@@ -13,7 +13,7 @@
     <script src="../tsznav/static/js/elementPlus-zhcn.js"></script>
     <script src="../tsznav/static/js/elementPlusIcon@2.0.4.js"></script>
     <script src="../tsznav/static/js/init.js"></script>
-    <title>字节码网址导航</title>
+    <title>网址导航</title>
     <link href="../tsznav/static/css/common.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="../tsznav/static/css/fonts/iconfont.css">
     <link rel="stylesheet" href="../tsznav/static/css/iconfonts/iconfont.css">
@@ -25,7 +25,11 @@
         <div class="navheader">
             <div class="logobox" >
                 <!-- <a href=""><img src="../tsznav/static/img/navbar.png" alt=""></a> -->
-                <h1><span><img src="./img/marbyte.png" alt="" style="width: 185px;position: relative;top: 10px;"></span>网址导航</h1>
+                <h1>
+                    <span>
+                        <!-- <img src="./img/marbyte.png" alt="" style="width: 185px;position: relative;top: 10px;"> -->
+                    </span>网址导航
+                </h1>
                 
             </div>
             <el-button @click="SetHome(this,window.location)">设为主页</el-button>
