--- a/website/cattool/index.html
+++ b/website/cattool/index.html
@@ -105,7 +105,7 @@
                 </el-tab-pane>
             </el-tabs>
         </div>
-        <div :class="isShowlastpage?'gg_box gg_open':'gg_box'" >
+        <div :class="isShowlastpage?'gg_box gg_open':'gg_box'" v-if="false">
             <span class="gg_label" v-show="isShowlastpage" @click="isShowlastpage=false">最近上新</span>
             <div class="gg_box_header">
                 <h2>最近上新</h2>
