--- a/website/cattool/index.html
+++ b/website/cattool/index.html
@@ -290,7 +290,7 @@
                 { id: '18', label: '趣味AI', list: ai2025lists },
                 { id: '19', label: '动效站点', list: effectweblists },
                 { id: '20', label: '自媒体运营', list: selfmedialists  },
-                { id: '21', label: '简单营销', list: Salelists  },
+                { id: '21', label: '搞副业', list: Salelists  },
             ]);
             const newName = computed(() => {
                   
