--- a/website/cattool/index.html
+++ b/website/cattool/index.html
@@ -223,7 +223,7 @@
 </body>
 
 </html>
-<script src="./static/js/data.js"></script>
+<script src="./static/js/data.js?v20250812"></script>
 <script src="./static/data/logdata.js"></script>
 <script>
     const App = {
